fixed woff2 font including

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
 	font-family: 'PFDinTextCondPro-Medium';
 	font-display: swap;
-	src: url("./fonts/PFDinTextCondPro-Medium.ttf") format('truetype'), url("./fonts/PFDinTextCondPro-Medium.woff") format('woff'), url("./fonts/PFDinTextCondPro-Medium.woff") format('woff2');
+	src: url("./fonts/PFDinTextCondPro-Medium.ttf") format('truetype'), url("./fonts/PFDinTextCondPro-Medium.woff") format('woff'), url("./fonts/PFDinTextCondPro-Medium.woff2") format('woff2');
 }
